#10699 configure surefire's JPMS command line to fix test
Signed-off-by: Ludovic Orban <lorban@bitronix.be>